# OpenPathAI

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  docs.yml  web.yml
data/datasets/: glas.yaml  histai_breast.yaml  histai_metadata.yaml  kather_crc_5k.yaml  lc25000.yaml  mhist.yaml  midog.yaml  monusac.yaml  monuseg.yaml  pannuke.yaml  pcam.yaml
data/stain_references/: he_breast.yaml  he_colon.yaml  he_default.yaml  he_lung.yaml
docker/: Dockerfile.cpu  Dockerfile.gpu  README.md
docs/: active-learning.md  annotate-workflow.md  api.md  audit.md  canvas.md  cli.md  cohorts.md  colab.md  datasets.md  detection.md  developer-guide.md  diagnostic-mode.md  faq.md  foundation-models.md  getting-started.md  gui.md  index.md  install.md  methods-writer.md  mil.md  nl-features.md  orchestration.md  preprocessing.md  quickstart.md  safety.md  segmentation.md  user-guide.md
docs/planning/: master-plan.md
docs/planning/archive/: 00-initial-draft.md  01-histoforge-draft.md
docs/planning/phases/: PHASE_TEMPLATE.md  README.md  phase-00-foundation.md  phase-01-primitives.md  phase-02-data-layer.md  phase-03-model-zoo-training.md  phase-04-explainability.md  phase-05-cli-notebook.md  phase-06-gradio-gui.md  phase-07-safety-and-local-datasets.md  phase-08-audit-history-diff.md  phase-09-cohorts-qc-train-driver.md  phase-10-snakemake-mlflow-parallel.md  phase-11-colab-exporter.md  phase-12-active-learning-cli.md  phase-13-foundation-mil.md  phase-14-detection-segmentation.md  phase-15-nl-zeroshot-medgemma.md  phase-16-annotate-gui.md  phase-17-diagnostic-mode-sigstore.md  phase-18-packaging-docker-docs.md  phase-19-fastapi-backend.md  phase-20-react-canvas.md  phase-20.5-canvas-task-surfaces.md  phase-21-openseadragon-viewer.md  phase-21.5-canvas-polish.md  phase-21.6-quickstart-wizard.md  phase-21.7-real-wizard.md  phase-21.8-models-real.md  phase-21.9-task-templates.md  phase-22.0-preflight-and-analyser.md  phase-22.1-dataset-planner.md
docs/setup/: huggingface.md  llm-backend.md
models/zoo/: convnext_tiny.yaml  efficientnet_b0.yaml  efficientnet_b3.yaml  mobilenetv3_large_100.yaml  mobilenetv3_small_100.yaml  resnet18.yaml  resnet50.yaml  swin_tiny_patch4_window7_224.yaml  vit_small_patch16_224.yaml  vit_tiny_patch16_224.yaml  yolov26_cls.yaml
notebooks/: 01_quick_start.ipynb  README.md
pipelines/: README.md  foundation_linear_probe.yaml  quickstart_pcam_dinov2.yaml  supervised_synthetic.yaml  supervised_tile_classification.yaml
scripts/: run-full.sh  try-it.sh  try-phase-10.sh  try-phase-11.sh  try-phase-12.sh  try-phase-13.sh  try-phase-14.sh  try-phase-15.sh  try-phase-16.sh  try-phase-17.sh  try-phase-18.sh  try-phase-7.sh  try-phase-8.sh  try-phase-9.sh
src/openpathai/: __init__.py
src/openpathai/active_learning/: __init__.py  corrections.py  diversity.py  loop.py  oracle.py  synthetic.py  uncertainty.py
src/openpathai/cli/: __init__.py  _app.py  active_learn_cmd.py  analyse_cmd.py  audit_cmd.py  cache_cmd.py  cohort_cmd.py  datasets_cmd.py  detection_cmd.py  diff_cmd.py  download_cmd.py  export_cmd.py  foundation_cmd.py  gui_cmd.py  linear_probe_cmd.py  llm_cmd.py  main.py  manifest_cmd.py  methods_cmd.py  mil_cmd.py  mlflow_cmd.py  models_cmd.py  nl_cmd.py  pipeline_yaml.py  run_cmd.py  segmentation_cmd.py  serve_cmd.py  train_cmd.py
src/openpathai/config/: __init__.py  hf.py
src/openpathai/data/: __init__.py  advise.py  advise_llm.py  analyse.py  cards.py  download.py  downloaders.py  local.py  registry.py  shape.py  splits.py  stain_refs.py
src/openpathai/demo/: __init__.py
src/openpathai/detection/: __init__.py  adapter.py  registry.py  schema.py  stubs.py  synthetic.py  yolo.py
src/openpathai/explain/: __init__.py  artifacts.py  attention_rollout.py  base.py  gradcam.py  integrated_gradients.py  node.py  slide_aggregator.py
src/openpathai/export/: __init__.py  colab.py
src/openpathai/foundation/: __init__.py  adapter.py  ctranspath.py  dinov2.py  fallback.py  registry.py  stubs.py  uni.py
src/openpathai/gui/: __init__.py  analyse_tab.py  annotate_tab.py  app.py  cohorts_tab.py  datasets_tab.py  models_tab.py  pipelines_tab.py  runs_tab.py  settings_tab.py  state.py  train_tab.py  views.py
src/openpathai/io/: __init__.py  cohort.py  wsi.py
src/openpathai/mil/: __init__.py  abmil.py  adapter.py  clam.py  registry.py
src/openpathai/models/: __init__.py  adapter.py  artifacts.py  cards.py  registry.py  timm_adapter.py
src/openpathai/nl/: __init__.py  methods_writer.py  pipeline_gen.py  text_prompt_seg.py  zero_shot.py
src/openpathai/pipeline/: __init__.py  cache.py  executor.py  manifest.py  mlflow_backend.py  node.py  schema.py  snakemake.py
src/openpathai/preprocessing/: __init__.py  mask.py  stain.py
src/openpathai/safety/: __init__.py  borderline.py  model_card.py  report.py  result.py
src/openpathai/segmentation/: __init__.py  adapter.py  registry.py  schema.py  stubs.py  synthetic.py  unet.py
src/openpathai/server/: __init__.py  app.py  auth.py  config.py  dzi.py  jobs.py  phi.py  schemas.py
src/openpathai/tiling/: __init__.py  tiler.py
src/openpathai/training/: __init__.py  artifacts.py  calibration.py  config.py  datasets.py  engine.py  linear_probe.py  losses.py  metrics.py  node.py
tests/: conftest.py
tests/fixtures/: README.md
tests/integration/: test_analyse_audit_e2e.py  test_analyse_pdf_e2e.py  test_cohort_qc_e2e.py  test_colab_round_trip.py  test_data_pipeline.py  test_explain_pipeline.py  test_hundred_slide_cache.py  test_supervised_pipeline.py  test_toy_pipeline.py  test_training_pipeline.py
tests/unit/: test_cli_smoke.py
tests/unit/active_learning/: __init__.py  test_corrections.py  test_diversity.py  test_loop.py  (+2 more)
web/canvas/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+264 files in other folders)
