[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

# ─── Project metadata ──────────────────────────────────────────────────────
[project]
name = "openpathai"
version = "0.0.1.dev0"
description = "Open-source, reproducible, compute-tier-aware workflow environment for computational pathology."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Dr. Atul Tiwari", email = "atultiwari.in@gmail.com" },
]
maintainers = [
    { name = "Dr. Atul Tiwari", email = "atultiwari.in@gmail.com" },
]
keywords = [
    "pathology",
    "histopathology",
    "digital-pathology",
    "whole-slide-image",
    "medical-imaging",
    "deep-learning",
    "computer-vision",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Typing :: Typed",
]

# Core runtime dependencies — intentionally minimal.
# Pathology / ML / GUI deps land in later phases via optional extras.
# Phase 1 adds ``pydantic`` for the typed pipeline primitive layer.
# Phase 2 adds ``numpy``, ``Pillow``, ``PyYAML`` for the data layer
# (registry, Cohort, stain normalisation, fixture slide generation).
dependencies = [
    "numpy>=1.26,<3",
    "pillow>=10.3,<12",
    "pydantic>=2.8,<3",
    "pyyaml>=6.0,<7",
    "typer>=0.15,<1.0",
    # Phase 15 — CLI main.py registers `openpathai nl` + `openpathai llm`
    # unconditionally, which chains through openpathai.nl.llm_backends
    # and lands on httpx at module load. Small dep footprint (httpcore +
    # h11 + certifi + idna + sniffio + anyio) — smaller than pulling
    # the full `openai` SDK.
    "httpx>=0.27,<1",
]

[project.urls]
Homepage      = "https://github.com/atultiwari/OpenPathAI"
Documentation = "https://atultiwari.github.io/OpenPathAI/"
Repository    = "https://github.com/atultiwari/OpenPathAI"
Issues        = "https://github.com/atultiwari/OpenPathAI/issues"
Changelog     = "https://github.com/atultiwari/OpenPathAI/blob/main/CHANGELOG.md"

# ─── CLI entry point ───────────────────────────────────────────────────────
[project.scripts]
openpathai = "openpathai.cli.main:app"

# ─── Tier-optional extras ──────────────────────────────────────────────────
# Placeholders in Phase 0 — each tier grows real dependencies in later phases
# per docs/planning/master-plan.md §7.6 and §23.
[project.optional-dependencies]
# Tile-level data work that requires scikit-image (only some preprocessing
# helpers). Does not require openslide/tiatoolbox system libs.
data = [
    "scikit-image>=0.23,<0.26",
    "tifffile>=2024.7.2",
]
# WSI I/O — heavy, requires system libraries (openslide). Kept optional so
# Linux/Windows CI can run the pure-Python test path.
#
# ``tiatoolbox`` was previously pinned here but has been removed: its
# upstream caps ``torchvision<=0.20`` and ``pillow<=10.1``, which blocks
# both the Phase 3 ``[train]`` extra on modern torch (needed for Python
# 3.13 wheels on Apple Silicon) and the Phase 2 pillow pin. The Phase 2
# data layer never imports ``tiatoolbox`` directly — it's only named in
# docstrings as a future-compatible alternative backend — so dropping
# the hard pin costs nothing today. Phase 9's cohort driver can
# reintroduce it on a pinned-tier basis when needed.
wsi = [
    "openpathai[data]",
    "openslide-python>=1.3,<2",
]
# Kaggle dataset downloader — lazy-imported from openpathai.data.download.
kaggle = [
    "kaggle>=1.6,<2",
]
# Supervised training (Phase 3+) — torch + timm + lightning + torchmetrics.
# Heavy wheels; kept out of [dev] so CI stays fast. Every import in the
# openpathai.training / openpathai.models.timm_adapter code paths is
# lazy-resolved, and the unit tests skip gracefully when absent.
train = [
    "openpathai[data]",
    # Python 3.13 support landed in torch 2.6.0 — lower bounds updated
    # so Apple-Silicon Macs on stock Homebrew Python (3.13) resolve
    # cleanly. torchvision pairs 1:1 with torch (2.6 ↔ 0.21).
    "torch>=2.6,<3",
    "torchvision>=0.21,<1",
    "timm>=1.0,<2",
    "torchmetrics>=1.3,<2",
    "lightning>=2.4,<3",
]
# Explainability (Phase 4+) — pure-torch Grad-CAM / attention rollout /
# IG ship in-tree; this extra pulls the *reference* library flavours
# (pytorch-grad-cam + captum) for users who want them. Lazy-imported.
explain = [
    "openpathai[train]",
    "grad-cam>=1.5,<2",
    "captum>=0.7,<1",
]
# Gradio surface (Phase 6+). Gradio is a ~200 MB dependency chain, so
# it lives in its own extra. Every ``import gradio`` in the
# ``openpathai.gui`` package is lazy-resolved inside a function body.
gui = [
    "openpathai[explain,safety]",
    # gradio>=5.20 / gradio_client>=1.7 fixes the
    # ``TypeError: argument of type 'bool' is not iterable`` crash in
    # ``gradio_client.utils.get_type`` when pydantic emits a schema with
    # ``additionalProperties: True``. 5.13 ships an older client and
    # blows up at API-info build time on Python 3.13 + modern pydantic.
    "gradio>=5.20,<6",
    "gradio-client>=1.7,<2",
]
# Safety v1 (Phase 7) — PDF reports via ReportLab. Pure-Python, BSD-3
# licence. Lazy-imported inside openpathai.safety.report.
# Phase 8 adds `keyring` for the audit delete-token store — gracefully
# falls back to a chmod-0600 file when keyring is unavailable.
safety = [
    "openpathai[audit]",
    "reportlab>=4.0,<5",
]
# Audit layer (Phase 8) — SQLite (stdlib) + keyring for the delete
# token. SQLite is always available; only keyring is optional.
audit = [
    "keyring>=24,<26",
]
# Orchestration (Phase 10) — opt-in MLflow sink. MLflow is ~50 MB
# of transitive deps; keep it out of the default install.
mlflow = [
    "mlflow>=2.17,<3",
]
# Snakefile export is a pure-string generator — snakemake itself is
# only needed to *run* the generated Snakefile. This extra pins a
# known-good version for the [local] bundle.
snakemake = [
    "snakemake>=8,<9",
]
local = [
    "openpathai[data,kaggle,wsi,train,explain,gui,safety,audit,mlflow,snakemake]",
]
colab = [
    "openpathai[local]",
]
runpod = [
    "openpathai[colab]",
]
notebook = [
    "openpathai[local]",
]
dev = [
    "openpathai[data]",
    # Lint + format — gradio>=5.20 pulls ruff>=0.9.3 as a transitive dep,
    # so keep our floor ahead of it so ``[dev]`` + ``[gui]`` can coexist.
    "ruff>=0.9.3,<1.0",
    # Type check
    "pyright>=1.1.389,<2.0",
    # Test
    "pytest>=8.3,<9",
    "pytest-cov>=5.0,<7",
    # Docs
    "mkdocs-material>=9.5,<10",
    "mkdocstrings[python]>=0.27,<1",
    # Git hooks
    "pre-commit>=4.0,<5",
]

# ─── Hatch build configuration ─────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["src/openpathai"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/CODE_OF_CONDUCT.md",
    "/NOTICE",
    "/pyproject.toml",
]

# ─── Ruff (lint + format) ──────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = [
    ".venv",
    "build",
    "dist",
    "site",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line-length handled by formatter
    "N812",  # allow `import torch.nn.functional as F` — canonical pytorch idiom
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "N802",  # function names in tests may not follow pep8
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ─── Pyright (type check) ──────────────────────────────────────────────────
[tool.pyright]
include = ["src"]
exclude = [
    ".venv",
    "**/__pycache__",
    "**/node_modules",
    "dist",
    "build",
    "site",
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
# torch / timm / lightning live in the optional [train] extra and are
# lazy-imported inside function bodies, so missing-import warnings here
# are expected when running the default dev environment.
reportMissingImports = "warning"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
# torch does not export common factories (``torch.tensor``,
# ``torch.from_numpy``, ``torch.arange``, ``torch.zeros_like``) in its
# ``__all__``. Pyright flags every callsite as a private-import
# violation; this is noise — the functions are the public API.
reportPrivateImportUsage = false

# ─── pytest ────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers --strict-config"
pythonpath = ["src"]
markers = [
    "unit: fast unit tests",
    "integration: integration tests (may touch disk or network)",
    "smoke: quick end-to-end smoke tests",
    "slow: slow tests (GPU / large downloads)",
]

[tool.coverage.run]
source = ["src/openpathai"]
branch = true
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
precision = 1
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

# ─── uv ────────────────────────────────────────────────────────────────────
# Tell uv which platforms it MUST find wheels for when resolving. Without
# this, uv can happily lock a version (torch 2.5.x) that only has
# manylinux wheels, which then blows up on Apple Silicon or on Python
# 3.13 when the user opts into the ``[train]`` extra.
[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64' and python_version == '3.11'",
    "sys_platform == 'darwin' and platform_machine == 'arm64' and python_version == '3.12'",
    "sys_platform == 'darwin' and platform_machine == 'arm64' and python_version == '3.13'",
    "sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.11'",
    "sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.12'",
    "sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.13'",
]

